Fixed horizontal spacing (overflowing page)

--- a/vulcantunes/src/app/ui/(overview)/product/[model]/styles/_layout.scss
+++ b/vulcantunes/src/app/ui/(overview)/product/[model]/styles/_layout.scss
@@ -21,6 +21,7 @@
 }
 
 .product-navigation {
+  width: fit-content;
   margin-bottom: 1rem;
 }
 
